# dwm

./: .gitignore  .xinitrc  01-touchpad.conf  Makefile  Makefile.am  auto_config.h.in  configure.ac  deps  pacman-deps  profile  xinitrc  yay-deps
dmenu/: Makefile  Makefile.am  config.h  dmenu  dmenu.c
dwm/: Makefile  Makefile.am  config.h  dwm  dwm.c
dwmblocks/: config.h
slstatus/: Makefile  config.h  slstatus.c
st/: Makefile.am  st  x.c
